# julius

./: .gitignore  README.md  ROADMAP.md  package-lock.json
docs/: CONFIGURACAO_DESENVOLVIMENTO.md  ESPECIFICACAO_BACKEND_MVP.md  local_installation.md
jules_flow/: TASK_INDEX.md
jules_flow/backlog/: TASK-002_Rewrite_README.md  TASK-003_Rewrite_ROADMAP.md  (+13 more)
juliao_api/: .env.dev  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
juliao_api/alembic/: env.py
juliao_api/alembic/versions/: 6e4a6b14feee_create_user_profiles_table.py  d46394d35f73_create_trigger_for_user_profile_creation.py  d6adfac5defe_create_initial_database_schema.py
juliao_api/app/: main.py
juliao_api/app/api/v1/endpoints/: users.py
juliao_api/app/apis/v1/: api.py
juliao_api/app/apis/v1/endpoints/: profiles.py
juliao_api/app/auth/: dependencies.py  jwt.py
juliao_api/app/core/: __init__.py  auth.py  config.py
juliao_api/app/crud/: __init__.py  crud_user_profile.py
juliao_api/app/db/: __init__.py  session.py
juliao_api/app/models/: __init__.py  base.py  finance_models.py  user_models.py  user_profile.py
juliao_api/app/schemas/: __init__.py  user_schemas.py
juliao_api/app/services/: user_service.py
juliao_api/tests/: conftest.py
juliao_api/tests/api/v1/: __init__.py  test_users_api.py
juliao_api/tests/apis/v1/: test_profiles.py
juliao_api/tests/auth/: __init__.py  test_jwt.py
juliao_api/tests/core/: test_auth.py
juliao_api/tests/services/: test_user_service.py
site/: index.html
site/assets/: style.css
supabase/: config.toml
(+5 files in other folders)
